Fixed a builder top margin issue on mobile.

--- a/assets/css/builder.css
+++ b/assets/css/builder.css
@@ -2130,10 +2130,6 @@ label.has-merge-tags .merge-tags {
   .nf-saved .nf-item::after {
     padding: 14px; } }
 
-@media only screen and (max-width: 600px) {
-  #nf-builder {
-    margin-top: 46px; } }
-
 .rtl.ninja-forms-app #wpcontent {
   margin-right: 140px; }
   .rtl.ninja-forms-app #wpcontent #wpbody {
