--- a/assets/scss/admin/media-queries.scss
+++ b/assets/scss/admin/media-queries.scss
@@ -392,7 +392,7 @@
 }
 
 @media only screen and (max-width: 600px) {
-    #nf-builder {
-        margin-top: 46px;
-    }
+    // #nf-builder {
+    //     margin-top: 46px;
+    // }
 }
